--- a/Assignments/A02.ipynb
+++ b/Assignments/A02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +131,198 @@
     "print(\"The second Array is: \", arr_2)\n",
     "\n",
     "print(f\"Addition: {np.add(arr_1, arr_2)}\\nMultiplication: {np.multiply(arr_1, arr_2)}\\nSubtraction: {np.subtract(arr_1, arr_2)}\\nDivision: {np.divide(arr_1, arr_2)}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array:[  1   4   9  16  25  36  49  64  81 100]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = np.array([1, 4, 9, 16, 25, 36, 49, 64, 81, 100])\n",
+    "arr = np.sqrt(nums)\n",
+    "\n",
+    "print(f'Original Array:{nums}')\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q06"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 9]\n",
+      " [4 9]]\n",
+      "determinant:27\n",
+      "Inverse:\n",
+      "[[ 0.33333333 -0.33333333]\n",
+      " [-0.14814815  0.25925926]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = np.random.randint(1, 10 ,size = (2, 2))\n",
+    "det = int(np.linalg.det(matrix))\n",
+    "print(matrix)\n",
+    "\n",
+    "if det == 0:\n",
+    "    print(f'determinant:{det} hence zero inverse doesnt exist')\n",
+    "else:\n",
+    "    print(f'determinant:{det}\\nInverse:\\n{np.linalg.inv(matrix)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q07"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max index = 41\n",
+      "min index = 48\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(1, 10000 ,50)\n",
+    "\n",
+    "print(f'max index = {np.argmax(arr)}\\nmin index = {np.argmin(arr)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q08"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.17821782,  0.35643564, -0.1980198 ])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coefficent_mat = np.array([[2, 4, 9],[1, 9, 7],[3, 8, 7]])\n",
+    "const_mat = np.array([2, 3, 5])\n",
+    "\n",
+    "np.linalg.solve(coefficent_mat, const_mat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q09"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8116.0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(1, 10000 ,25)\n",
+    "\n",
+    "np.percentile(arr, 75)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array = [29 52 16 15 87]\n",
+      "Normalized:[-0.39837484  0.45001602 -0.87790011 -0.91478667  1.7410456 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def normalize_array(array):\n",
+    "    mean = np.mean(arr)\n",
+    "    std_deviation = np.std(arr)\n",
+    "    \n",
+    "    return np.divide((np.subtract(arr, mean)), std_deviation)\n",
+    "\n",
+    "arr = np.random.randint(1, 100, 5)\n",
+    "print(f'Array = {arr}\\nNormalized:{normalize_array(arr)}')\n"
    ]
   }
  ],
